--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ body,
 }
 
 .slide1 {
-    background-image: url('sliderr1.jpg');
+    background-image: url('slider1.jpg');
 }
 
 .slide2 {
-    background-image: url('sliderr2.jpg');
+    background-image: url('slider2.jpg');
 }
 
 .slide3 {
